--- a/views/aoAuth.pug
+++ b/views/aoAuth.pug
@@ -3,7 +3,7 @@ head
   title Create FO Authentication Details
   link(rel='stylesheet' href='css/aoAuth.css')
 header
-  h1 Create FO Authentication Details
+  h1 Create Farmer One Authentication Details
 main
   form#regForm(name='register' onsubmit='return Validate();'  method = 'POST' action = '/signup' )
     fieldset
