--- a/views/foRegistrartion.pug
+++ b/views/foRegistrartion.pug
@@ -76,7 +76,7 @@ form#regForm(name='register' action ='/registerUrbanFamer' method ='post'
   button(type='submit') Submit
 // <script src="./regFormValidation.js"></script>
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe' crossorigin='anonymous')
-script(src="js/aoRandom.js") 
+script(src="js/foRandom.js") 
 script(src="js/registration.js") 
 
 
